--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.8'
     implementation 'com.google.firebase:firebase-firestore:24.3.1'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+    implementation 'com.vanniktech:emoji-google:0.7.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
